version 0.1.5
============================
o implemented flexible netCDF I/O handler (currently works only with Nio, but should work with netCDF module in the future)
o improvement of report layout and automatic compilation enabled
o name of analysis scripts is now specified in external file in the configuration directory
o benchmarking now independent from core pyCMBS installation. When pycmbs.py is executable and proper PATH variables are set, then the framework can be executed from everywhere!
o pycmbs.py init --> generates now a template environment for benchmarking; documentation has adapted accordingly


version 0.1.4 (=rev 405)
============================
o This version is the reference version for the EvaCliMod project
o major improvements of reporting functionalities as needed for EvaClimod project
o added new functionality in GlecklerPlot class to plor errors and ranked errors
o several major bugfixes in the timeconversion in different parts of the code to be compliant with new calendar handling functionality
o implemented standard analysis for surface_radiation_flux
o implementation of a ModelMean class to handle multimodel mean datasets
o implemented standard analysis for SIS analysis
o implemented additional datasets for ocean surface fluxes
o removal of pyCDO
o implemented more robust calculation of cell_area (using temp. directories if no write access to data directory)
o automatic logging of errors in the Data class (uses environment variable)
o implemented mindate/maxdate for Data object


version 0.1.3
============================
o albedo analysis for VIS and NIR separately for JSBACH raw output
o bugfix with datetime conversion for GlobalMean plot.
o proper implementation of multimodel mean
o implemented Data.date to allow for an easier access to date from a Data object using datetime.datetime
o implemented standard analysis of variable: surface_upward_flux


version 0.1.2 (=rev274)
============================